# planet-placer

./: Cargo.toml
shaders/: background.wgsl  simple_3d.wgsl
src/: background.rs  icosahedron.rs  main.rs  planet.rs  setup.rs  triangle.rs
src/planet/: regions.rs  tectonic_plates.rs
src/utils/: buffer.rs  camera.rs  mod.rs  packed_vec3.rs
