[package]
name = "planet-placer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", default-features = false, features = [
    "wayland",
    "wayland-csd-adwaita",
    "wayland-dlopen",
    "rwh_05",
    "rwh_06",
] }
env_logger = "0.10"
log = "0.4"
wgpu = "24.0"
anyhow = "1.0"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
